--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "redux-simple-starter",
+  "name": "weather_forecast",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "React + Redux + axios",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "git@github.com:bertin/weather_forecast.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
-  "author": "",
+  "author": "Bertin Hansen (Based on Stephen Griders Course on Udemy)",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "stylus": "^0.54.5",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "axios": "^0.9.1",
-    "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-google-maps": "^4.7.1",
-    "react-redux": "^4.0.0",
-    "react-sparklines": "^1.4.2",
-    "redux": "^3.0.4",
-    "redux-promise": "^0.5.1"
+    "axios": "^0.15.3",
+    "babel-preset-stage-1": "^6.22.0",
+    "lodash": "^4.17.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "react-addons-update": "15.4.1",
+    "redux-promise": "^0.5.3",
+    "react-google-maps": "^4.11.0",
+    "react-sparklines": "^1.6.0"
   }
 }
